[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/LobbyMenu/LobbyMenuScript.gd" type="Script" id=1]
[ext_resource path="res://scenes/BaseUiComponents/RegularLabel/RegularLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/BaseUiComponents/H2/H2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/BaseUiComponents/Button/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/BaseUiComponents/LineEdit/LineEdit.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/icons/logo.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/fonts/firacode/ttf/FiraCode-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="DynamicFont" id=6]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Environment" id=4]
background_mode = 4
tonemap_mode = 2
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.75
glow_bloom = 0.15
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="LobbyMenu" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -351.0
margin_top = -196.0
margin_right = 349.0
margin_bottom = 238.0
custom_constants/separation = 40
alignment = 1

[node name="ChooseName" type="HBoxContainer" parent="Control/MainMenu"]
margin_left = 90.0
margin_top = 149.0
margin_right = 610.0
margin_bottom = 194.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="Name" parent="Control/MainMenu/ChooseName" instance=ExtResource( 7 )]
self_modulate = Color( 0.0470588, 0.823529, 0.619608, 1 )
margin_top = 0.0
margin_right = 520.0
margin_bottom = 45.0
align = 1
max_length = 10
placeholder_text = "Enter name"

[node name="Connect" parent="Control/MainMenu" instance=ExtResource( 6 )]
self_modulate = Color( 0.0666667, 0.541176, 0.698039, 1 )
margin_left = 260.0
margin_top = 234.0
margin_right = 440.0
margin_bottom = 284.0
size_flags_horizontal = 4
text = "Connect"

[node name="Loading" type="HBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -26.0
margin_right = 135.0
margin_bottom = 26.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="Control/Loading" instance=ExtResource( 5 )]
margin_right = 280.0
margin_bottom = 56.0

[node name="Status" parent="Control" instance=ExtResource( 5 )]
self_modulate = Color( 1, 0.819608, 0.4, 1 )
material = SubResource( 7 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 0.0
custom_colors/font_color = Color( 1, 0.819608, 0.4, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Connecting..."
align = 1

[node name="FooterCredits" parent="Control" instance=ExtResource( 4 )]
self_modulate = Color( 1, 0.568627, 0.643137, 1 )
material = SubResource( 5 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -79.0
margin_right = 376.0
margin_bottom = -30.0
grow_vertical = 0
rect_min_size = Vector2( 376, 49 )
custom_colors/font_color = Color( 0.937255, 0.278431, 0.435294, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 0

[node name="Logo" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -466.0
margin_top = 100.0
margin_right = 118.002
margin_bottom = 235.0
rect_scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 10 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[connection signal="pressed" from="Control/MainMenu/Connect" to="." method="_on_Connect_pressed"]
